--- a/layouts/partials/introsection.html
+++ b/layouts/partials/introsection.html
@@ -11,12 +11,12 @@
 		
 		<div class="row row-bottom-padded-lg intro-items">
 		    <div class="col to-animate ">
-                {{ with .Site.GetPage "page" "referenzen/maeder-event.md" }}
+                {{ with .Site.GetPage "page" "referenzen/teaser/maeder-event.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
 			<div class="col-12 col-md-6 to-animate ">
-                {{ with .Site.GetPage "page" "referenzen/ruvido.md" }}
+                {{ with .Site.GetPage "page" "referenzen/teaser/ruvido.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
@@ -24,12 +24,12 @@
 		 					 
 		<div class="row row-bottom-padded-lg intro-items">
 			<div class="col-12 col-md-7 to-animate ">
-                {{ with .Site.GetPage "page" "referenzen/award-marketing-architektur.md" }}
+                {{ with .Site.GetPage "page" "referenzen/teaser/award-marketing-architektur.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
-            <div class="col to-animate b2berne">
-                {{ with .Site.GetPage "page" "referenzen/b2berne.md" }}
+            <div class="col to-animate">
+                {{ with .Site.GetPage "page" "referenzen/teaser/b2berne.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
@@ -38,12 +38,12 @@
 				
 		<div class="row row-bottom-padded-lg intro-items">
             <div class="col to-animate ">
-                {{ with .Site.GetPage "page" "referenzen/silenthelp-teaser.md" }}
+                {{ with .Site.GetPage "page" "referenzen/teaser/silenthelp.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
             <div class="col-12 col-md-4 to-animate ">
-                {{ with .Site.GetPage "page" "referenzen/praxis-fuer-entspannung-workware.md" }}
+                {{ with .Site.GetPage "page" "referenzen/teaser/praxis-fuer-entspannung-workware.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
@@ -52,12 +52,12 @@
 		
 		<div class="row row-bottom-padded-lg intro-items">
 			<div class="col-12 col-md-4 to-animate ">
-				{{ with .Site.GetPage "page" "referenzen/grafikdesign.md" }}
+				{{ with .Site.GetPage "page" "referenzen/teaser/grafikdesign.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
 			</div>
            	<div class="col to-animate ">
-                {{ with .Site.GetPage "page" "referenzen/o-maeder-einladung.md" }}
+                {{ with .Site.GetPage "page" "referenzen/teaser/o-maeder-einladung.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
@@ -68,17 +68,17 @@
 		
 		<div class="row row-bottom-padded-lg intro-items">
 		   <div class="col to-animate ">
-				{{ with .Site.GetPage "page" "referenzen/contria-workware.md" }}
+				{{ with .Site.GetPage "page" "referenzen/teaser/contria-workware.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
 			</div>
 			<div class="col col-12 col-md-4 to-animate ">
-				{{ with .Site.GetPage "page" "referenzen/professionell-werben.md" }}
+				{{ with .Site.GetPage "page" "referenzen/teaser/professionell-werben.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
 			</div>
 			<div class="col col-12 col-md-4 to-animate ">
-                {{ with .Site.GetPage "page" "referenzen/lebana-workware.md" }}
+                {{ with .Site.GetPage "page" "referenzen/teaser/lebana-workware.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
@@ -86,12 +86,12 @@
 		
 		<div class="row row-bottom-padded-lg intro-items">
 		    <div class="col-12  col-md-7 to-animate ">
-                {{ with .Site.GetPage "page" "referenzen/bijoux-stadelmann-inserat.md" }}
+                {{ with .Site.GetPage "page" "referenzen/teaser/bijoux-stadelmann-inserat.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
             <div class="col to-animate ">
-                {{ with .Site.GetPage "page" "referenzen/building-award2.md" }}
+                {{ with .Site.GetPage "page" "referenzen/teaser/building-award2.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
@@ -99,12 +99,12 @@
 		
 		<div class="row row-bottom-padded-lg intro-items">
 			<div class="col-12 col-md-6 to-animate ">
-                {{ with .Site.GetPage "page" "referenzen/praxis-fuer-entspannung-postcard.md" }}
+                {{ with .Site.GetPage "page" "referenzen/teaser/praxis-fuer-entspannung-postcard.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
             <div class="col to-animate ">
-                 {{ with .Site.GetPage "page" "referenzen/building-award.md" }}
+                 {{ with .Site.GetPage "page" "referenzen/teaser/building-award.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
@@ -112,12 +112,12 @@
 	
 		<div class="row row-bottom-padded-lg intro-items">
             <div class="col to-animate ">
-                {{ with .Site.GetPage "page" "referenzen/swiss-sales-einladung.md" }}
+                {{ with .Site.GetPage "page" "referenzen/teaser/swiss-sales-einladung.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
 			<div class="col-4 to-animate ">
-                {{ with .Site.GetPage "page" "referenzen/soziale-innovation-publikation.md" }}
+                {{ with .Site.GetPage "page" "referenzen/teaser/soziale-innovation-publikation.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
@@ -125,12 +125,12 @@
 		
 		<div class="row row-bottom-padded-lg intro-items">
             <div class="col-12 col-md-5 to-animate ">
-                {{ with .Site.GetPage "page" "referenzen/stuecheli-architekten-jahrbuch.md" }}
+                {{ with .Site.GetPage "page" "referenzen/teaser/stuecheli-architekten-jahrbuch.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
             <div class="col to-animate ">
-                {{ with .Site.GetPage "page" "referenzen/bijoux-stadelmann-event.md" }}
+                {{ with .Site.GetPage "page" "referenzen/teaser/bijoux-stadelmann-event.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
@@ -138,17 +138,17 @@
 		
 		<div class="row row-bottom-padded-lg intro-items">
 	       <div class="col-12 col-md-4 to-animate ">
-                {{ with .Site.GetPage "page" "referenzen/wuethrich-kies-grafik.md" }}
+                {{ with .Site.GetPage "page" "referenzen/teaser/wuethrich-kies-grafik.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
             <div class="col to-animate ">
-                {{ with .Site.GetPage "page" "referenzen/usbsticks.md" }}
+                {{ with .Site.GetPage "page" "referenzen/teaser/usbsticks.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
             <div class="col to-animate ">
-                {{ with .Site.GetPage "page" "referenzen/garage-hofmann-werbeartikel.md" }}
+                {{ with .Site.GetPage "page" "referenzen/teaser/garage-hofmann-werbeartikel.md" }}
                     {{ partial "intro.html" .}}
                 {{ end }}
             </div>
