--- a/layouts/index.html
+++ b/layouts/index.html
@@ -16,6 +16,8 @@
 		{{ partial "hero.html" .}}
 		
 	    <!--{{ partial "campaign.html" .}}-->
+	   
+	    {{ partial "weihnachtskugel.html" .}}
 		
 		
         {{ partial "introsection.html" .}}
