--- a/layouts/partials/campaign.html
+++ b/layouts/partials/campaign.html
@@ -10,8 +10,13 @@
     							<!--<h3 class="to-animate">Aktuell</h3>-->
     							<div class="sticky ">
     							    <a href="http://www.b2berne.ch/cont/anmeldung_aussteller.html" target="_blank" >
-    							        <h3>Aktuell</h3>
-    						    	    <img src="img/b2berne-jetztanmelden.png">
+    							        <h3>Weihnachtsferien</h3>
+    							        <p>Unsere Agentur bleibt bis und mit 4. Januar 2019 geschlossen.</p>
+    							        <p>Wir wünschen Euch frohe Festtage und einen tollen Start ins neue Jahr!</p>
+    						    	    <!--<img src="img/b2berne-jetztanmelden.png">-->
+    						    	    <p>Unsere Agentur bleibt vom 24. Dezember 2018 bis und mit 4. Januar 2019 geschlossen. Gerne sind wir ab dem 7. Januar 2019 wieder für Sie da!
+<br>
+Wir wünschen Ihnen besinnliche Festtage und einen tollen Start ins neue Jahr!</p>
     						    	</a>
     							</div>
 
