removed the christmasball

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -17,7 +17,7 @@
 		
 	    <!--{{ partial "campaign.html" .}}-->
 	   
-	    {{ partial "weihnachtskugel.html" .}}
+	    <!--{{ partial "weihnachtskugel.html" .}}-->
 		
 		
         {{ partial "introsection.html" .}}
